--- a/src/app.html
+++ b/src/app.html
@@ -6,19 +6,13 @@
     <meta property="og:site_name" content="Trace Herrell" />
     <meta
       property="og:title"
-      content="Software Development Leader, Cloud Architect"
+      content="Software Development, Cloud Architecture, IT Consulting"
     />
     <meta
       property="og:description"
-      content="I have several years of experience building end to end solutions in a variety of verticals: healthcare, insurance, e-commerce, real estate, education, and IoT. I am competent engineer and dev manager comfortable in all areas of the software stack. In the last few years I have really used my experien..."
+      content="I am a software development leader and cloud architect with over 20 years of experience in the industry. I have a passion for building high performing teams and delivering high quality software."
     />
 
-    <meta
-      property="og:image"
-      content="https://profile.traceherrell.com/_app/assets/profile_standing.1ab7aa51.jpg"
-    />
-    <meta property="og:image:width" content="640" />
-    <meta property="og:image:height" content="1280" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link
